draft for first recommender engine, updated introduction, typos

--- a/includes/config.tex
+++ b/includes/config.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{mathtools}
 \usepackage{listings}
+\usepackage{dirtytalk}
 \usepackage{float}
 \usepackage{fontspec}
 \usepackage{minted}
