--- a/includes/references.bib
+++ b/includes/references.bib
@@ -34,6 +34,14 @@
   publisher={Springer}
 }
 
+@MISC{pike12,
+    AUTHOR       = {{Rob Pike}},
+    TITLE        = {Go at Google: Language Design in the Service of Software Engineering},
+    HOWPUBLISHED = {http://talks.golang.org/2012/splash.article},
+    NOTE         = {Accessed September 10, 2015},
+    YEAR         = {2012}
+}
+
 @BOOK{ricci11,
     AUTHOR    = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
     TITLE     = {Introduction to Recommender Systems Handbook},
