--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,57 +1,68 @@
 \chapter{Introduction}
 
-A \emph{recommender system} is a software which suggests useful items to a user usually on a website. A user is typically assisted in their search process on the website to find the right item. Recommender systems are able to personalise so that they try to suggest only items relevant for the given user. In order to do this, recommender systems rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
+A \emph{recommender engine}, or just \emph{recommender}, is a system which suggests useful items to a user -- usually on a website. A user is typically assisted in their search process to find the right items. Recommender engines are able to personalise this process so that they try to suggest only items relevant for the given user. In order to do this, recommender engines rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}.
 
-Recommender systems are usually tightly coupled to the domain and system architecture. Bespoke recommender systems may be very dependent on the system's data model as well as technical constraints such as programming languages. The adaption of recommender systems require knowledge and expertise in both domain and recommender systems. The effort would add more complexity and dependencies to systems, which are probably complex themselves, making change very expensive and time consuming. Being tightly coupled, a recommender implementation is very likely to be incompatible for another use case.
+Recommender engines are usually tightly coupled to the application they are used in. Bespoke  engines may be very dependent on the data model as well as technical constraints of those applications such as programming languages and database management systems. The adaptation of recommender engines requires knowledge and expertise in both the application and recommender engines. That effort would also add more complexity and dependencies to those applications, which are probably complex themselves, making change very expensive and time consuming. Being tightly coupled, a recommender engine is very likely to be incompatible for another application.
 
-This project aimed to develop and evaluate approaches to unscramble this complexity by abstraction so that domain and recommender systems are independent and insular from each other. Second, the integration of both is to be simplified and eased. Third, the re-usability and interoperability of various recommender systems is to be empowered. Finally, this project is to allow the unconstrained utilisation of the most appropriate technologies for the individual use case.
+This project aims to develop and evaluate a framework for integrating recommender engines into applications in a way which promotes amongst others reusability and is easy to integrate. In order to demonstrate those capabilities, two recommender engines -- each implementing a fundamentally different recommendation technique -- are implemented. Moreover, the framework and these recommender engines are then integrated into a complex e-commerce web application.
 
 \section{Background Research}
 
-\citet{ricci11} write that traditional recommendations can be observed in various scenarios, such as a peer's recommendation when buying a book or reviews when choosing a movie. The authority of the recommender has an important role in the acceptance of the recommendation. A renowned film critic may appear more credible than a random colleague. When it comes to car parts, a mechanist may be a good candidate to ask.
+\citet{ricci11} write that traditional recommendations can be observed in various scenarios, such as a peer's recommendation when buying a book or reviews when choosing a movie. The authority of the recommender has an important role in the acceptance of a recommendation. A renowned film critic may appear more credible than a random colleague whereas when it comes to car parts, a mechanist may be a the first person to ask.
 
-With the growth of the Internet, the amount of information available on the Web increased rapidly. Especially, major e-commerce Web sites were extending their range of products and services. Although a wider and varied range of items is initially good for the user, users found it more and more difficult to find the appropriate items or make the right choices. Web sites have deployed different type of solutions -- such as search engines and more user-friendly interfaces -- to cope with this problem.
+With the growth of the Internet, the amount of information available on the Web increased rapidly. Especially, major e-commerce Web sites were extending their range of products and services. Although a wider and varied range of items is initially good for customers, they found it more and more difficult to find appropriate items and make the right choices of what to buy. Web sites have deployed different type of solutions -- such as search engines and more user-friendly interfaces -- to cope with this problem.
 
-Another approach is recommender systems, which basically provide a bespoke collection of items with the intention to highlight relevant items to a user. Depending on the recommendation technique used, various data sources are taken into account like the user's context or previous interactions. Most recommender systems concentrate on guiding the user towards novel, unexperienced items \cite{herlocker04}.
+Another approach is recommender engines, which basically provide a bespoke, personalised collection of items with the intention to highlight only relevant items to a user. Depending on the recommendation technique used, various data sources are taken into account such as the user's context or previous interactions. Most recommender engines concentrate on guiding the user towards novel, unexperienced items \cite{herlocker04}.
 
 \subsection{Techniques}
 
-In the course of development different techniques to compute recommendations emerged. Fundamentally, techniques are classified by the information sources they use. The sources of personalised recommendations are typically user-item interactions (\emph{collaborative filtering}), item features (\emph{content-based filtering}), user features (\emph{demographic filtering}) as well as knowledge about the user and item (\emph{knowledge-based filtering}). Amongst those, the following were implemented in this project:
+In the course of research in this field different techniques to compute recommendations emerged. Fundamentally, techniques are classified by the information sources they rely on. The sources of personalised recommendations are typically user-item interactions (\emph{collaborative filtering}), item features (\emph{content-based filtering}), user features (\emph{demographic filtering}) as well as specialised knowledge about the user and item (\emph{knowledge-based filtering}).  Amongst those, the techniques collaborative and content-based filtering are explained as they are used by the recommender engines implemented as part of this project:
 
 \subsubsection{Collaborative Filtering}
 \label{intro-bg-tech-collaborative}
 
 \begin{figure}[ht]
     \includegraphics[width=0.7\textwidth,center]{intro/background/collaborative.pdf}
-    \caption{Collaborative Filtering}
-    \label{fig:collaborative}
+    \caption{Collaborative Filtering Diagram}
+    \label{fig:intro-techniques-collaborative}
 \end{figure}
 
-This technique recommends items other users with similar preferences have shown a positive expression e.g. \emph{liked} or \emph{purchased}. In order to do this, the recommender system needs to observe users' behaviours and interactions. Based on these learnings, it will then look up other users with similar behaviour patterns and build recommendations from their preferences -- preferably items that the active user has not experienced yet.
+This technique recommends items other users with similar preferences have shown a positive expression e.g. \emph{liked} or \emph{purchased} for before. In order to do this, the recommender engine needs to observe behaviour patterns and interactions of users. Based on these learnings, it will then look up other users with similar behaviour patterns and compute recommendations from their preferences -- preferably items that the given user -- the user the recommendations are for -- has not experienced yet.
 
-The major advantage of the collaborative filtering approach is that the recommender system does not require any knowledge about the items itself.
+The major advantage of this approach is that the recommender engine does not require any knowledge about the items themselves.
 
-Figure \ref{fig:collaborative} illustrates a scenario where the active customer has purchased several items in the past. The recommender system understands that the active customer is similar to another, as both have purchased the phone and the laptop. Then, the system computes items the similar customer purchased but the active customer has not. It therefore recommends the TV to the active customer.
+Figure \ref{fig:intro-techniques-collaborative} illustrates a scenario where a customer has purchased several items in the past. The recommender engine understands that the given customer is similar to other customers, as both have purchased the same phone and laptop. Then, the system computes items these similar customers purchased but the given customer has not yet. It therefore recommends a TV to the given customer.
 
 \subsubsection{Content-Based Filtering}
 
 \begin{figure}[ht]
     \includegraphics[width=0.7\textwidth,center]{intro/background/contentbased.pdf}
-    \caption{Content-Based Filtering}
-    \label{fig:contentbased}
+    \caption{Content-Based Filtering Diagram}
+    \label{fig:intro-techniques-contentbased}
 \end{figure}
 
-Content-based recommendation methods make use of item features to find similar items. Based on items the user has shown a preference to before -- such as \emph{rated} or \emph{purchased} -- other similar items are looked up based on the item's features. Figure \ref{fig:contentbased} illustrates a customer who has rated an item positively. The recommender system compares the rated item with other items, finds another item, which has the same brand and therefore recommends that item.
+Content-based recommendation methods compare item features to find similar items. Based on items the user has shown a preference for before -- such as \emph{rated} or \emph{purchased} -- other similar items are looked up based on features of this item. Figure \ref{fig:intro-techniques-contentbased} illustrates a customer who has rated an item positively. The recommender engine compares the rated item with other items, finds another item, which has the same brand and therefore recommends that item.
+
+Demographic filtering is a specialisation of content-based filtering putting emphasis on user rather than item features. A very basic demographic filtering can be achieved by regular content-based recommender engines by sourcing user data as items. The content-based recommender engine, implemented as part of this project does not distinguish between users and items, thus is able to handle demographic queries as well.
 
 \subsubsection{Hybrids}
 \label{intro-bg-tech-hybrid}
 
-Hybrid recommender systems make use of two or more individual recommender systems -- hereinafter referred to as components -- to combine aforementioned techniques. One possible motivation of using hybrid systems may be to overcome weaknesses of one approach by combining it with another. However it is also possible to combine systems implementing the same technique but e.g. using different data sources.
+Hybrid recommender engines make use of two or more individual recommender engines -- hereinafter referred to as components. This is in particular interesting as it enables hybrid engines to utilise different kind of filtering techniques at once. A possible motivation of using hybrid engines is to overcome weaknesses of one engine with another. However it is also possible to combine systems implementing the same technique but e.g. using different data sources.
 
-There are many possible ways of combining techniques, which are outlined in the proposal. In this project, a \emph{weighted} hybrid recommender was implemented which combines the scores of recommender components using a linear formula. A score is a numerical rank attached to items.
+There are many possible ways of combining techniques, which are outlined in the proposal. In this project, a \emph{weighted} hybrid recommender engine is implemented which combines the scores of its components using a linear formula. A score is a numerical preference rank attached to recommendations.
 
 \section{Objectives}
 \label{intro-objectives}
+
+\subsection{Development of an Integration Framework}
+\label{intro-objectives-framework}
+
+\subsection{Development of Collaborative and Content-Based Recommender Engines}
+\label{intro-objectives-engines}
+
+\subsection{Integration into a Demo Application}
+\label{intro-objectives-demo}
 
 \subsection{Abstraction}
 \label{intro-objectives-abstraction}
@@ -59,10 +70,10 @@ There are many possible ways of combining techniques, which are outlined in the 
 This objective aims a separation of a system into smaller, loose coupled components and suggests the following criteria:
 
 \begin{description}
-    \item[Complexity] Applications such as recommender systems tend to be complex. If not separated, every component adds to the overall complexity making change very difficult, time consuming and expensive. Any change requires knowledge, testing and probably modifications of the whole system.
+    \item[Complexity] Applications such as recommender engines tend to be complex. If not separated, every component adds to the overall complexity making change very difficult, time consuming and expensive. Any change requires knowledge, testing and probably modifications of the whole system.
     \item[Dependency] If a system needs to be modified or even replaced, tightly coupled components become a dependency leading to expensive and tiresome rework.
     \item[Encapsulation] Information hiding is the main motivation behind encapsulation. The more information and implementation is hidden, the looser the coupling becomes. The benefit is that internal changes do not affect other components at all as long as the interfaces remain the same.
-    \item[Database Abstraction] Recommender systems with direct access to databases of integrating applications are problematic as these systems are affected by any change of these databases.
+    \item[Database Abstraction] Recommender engines with direct access to databases of integrating applications are problematic as these systems are affected by any change of these databases.
     \item[Reusability] Tightly coupled components are difficult to reuse. Reusability is the main driver for multi-purposefulness of this project.
 \end{description}
 
@@ -74,19 +85,19 @@ The complexity and cost of integration of new systems into existing applications
 \subsection{Multi-Purpose \& Interoperability}
 \label{intro-objectives-multipurpose}
 
-A \emph{multi-purpose} recommender system is able to cope with different data sources and techniques. Ideally this system is extendable for possible forthcoming, yet unknown requirements.
+A \emph{multi-purpose} recommender engine is able to cope with different data sources and techniques. Ideally this system is extendable for possible forthcoming, yet unknown requirements.
 
-This multi-purposefulness can be also described in the interoperability between recommender systems. \citet{manouselis07} differentiate between three criteria:
+This multi-purposefulness can be also described in the interoperability between recommender engines. \citet{manouselis07} differentiate between three criteria:
 
 \begin{description}
     \item[Interoperability of the recommendation queries] which allows the same query to be reused. This can be achieved by variable parameters in the query.
-    \item[Interoperability of the user and the domain models] which allows the exchange of models and other data among different recommender systems.
-    \item[Interoperability of the recommendation results] which empowers recommender systems to reuse the results. This is in particular useful for hybrid recommender systems.
+    \item[Interoperability of the user and the domain models] which allows the exchange of models and other data among different recommender engines.
+    \item[Interoperability of the recommendation results] which empowers recommender engines to reuse the results. This is in particular useful for hybrid recommender engines.
 \end{description}
 
 \subsection{Technological Unbiasedness}
 
-The proposal inarticulately stated another objective to build a mechanism, which allows the integration of various recommender techniques to \emph{coexist} and \emph{cooperate}. \emph{Coexistence} refers to supporting various recommender techniques and solutions regardless of technology, language, storage technology and operating system. Furthermore, \emph{cooperation} emphasises the aforementioned interoperability between those recommenders.
+The proposal noted another objective to build a mechanism, which allows the integration of various recommender techniques to \emph{coexist} and \emph{cooperate}. \emph{Coexistence} refers to supporting various recommender techniques and solutions regardless of technology, language, storage technology and operating system. Furthermore, \emph{cooperation} emphasises the aforementioned interoperability between those recommenders.
 
 \section{Structure of the Report}
 
